<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/popup_item_line" />

    <TextView
        android:id="@+id/all_order"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/all_order"
        android:textSize="@dimen/text_size_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/popup_item_line" />

    <TextView
        android:id="@+id/wait_service"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/wait_service"
        android:textSize="@dimen/text_size_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/popup_item_line" />

    <TextView
        android:id="@+id/un_paid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/un_paid"
        android:textSize="@dimen/text_size_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/popup_item_line" />

    <TextView
        android:id="@+id/paid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/paid"
        android:textSize="@dimen/text_size_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/popup_item_line" />

    <TextView
        android:id="@+id/popup_order_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/popup_order_cancel"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>