<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <anda.travel.driver.baselibrary.view.HeadView
            android:id="@+id/head_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/withdraw_details" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_27"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/withdrawal_money" />

                    <TextView
                        android:id="@+id/tv_withdraw_fee"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:text="@string/withdraw_fee"
                        android:textColor="@color/item_black_primary"
                        android:textSize="@dimen/text_size_middle" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/withdraw_way" />

                    <TextView
                        android:id="@+id/tv_withdraw_way"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:text="@string/withdrawal_to_zhifubao" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/withdraw_account_name" />

                    <TextView
                        android:id="@+id/tv_withdraw_account_name"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/withdraw_account" />

                    <TextView
                        android:id="@+id/tv_withdraw_account"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/poundage" />

                    <TextView
                        android:id="@+id/tv_poundage"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:text="@string/yuan" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/apply_time" />

                    <TextView
                        android:id="@+id/tv_apply_time"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/audit_time" />

                    <TextView
                        android:id="@+id/tv_audit_time"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/audit_result" />

                    <TextView
                        android:id="@+id/tv_audit_result"
                        style="@style/TextStyleEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_35">

                    <TextView
                        android:id="@+id/tv_remark_tag"
                        style="@style/TextStyleStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:text="@string/remark" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/margin_20"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:layout_toEndOf="@id/tv_remark_tag"
                        android:gravity="end">

                        <TextView
                            android:id="@+id/tv_remark"
                            style="@style/TextStyleEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>



