<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/icon_bg_pop"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/yesterday"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/yesterday"
            android:textColor="@drawable/pop_text_bg"
            android:textSize="@dimen/size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <TextView
            android:id="@+id/threeday"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/threeday"
            android:textColor="@drawable/pop_text_bg"
            android:textSize="@dimen/size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <TextView
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/week"
            android:textColor="@drawable/pop_text_bg"
            android:textSize="@dimen/size_14" />

    </LinearLayout>

</LinearLayout>