<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <anda.travel.driver.baselibrary.view.HeadViewWhite
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/report_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_report_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_20">

        <TextView
            android:id="@+id/tv_report_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/report_all"
            android:textColor="@color/popup_item_un_choose"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_report_all_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_13"
            android:text="@string/report_all_notice"
            android:textColor="@color/item_gray_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_report_all" />

        <ImageView
            android:id="@+id/iv_all_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:src="@drawable/icon_blue_tick"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        style="@style/LineViewStyleNew"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_report_special"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_20">

        <TextView
            android:id="@+id/tv_report_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/report_special"
            android:textColor="@color/popup_item_un_choose"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_report_special_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_13"
            android:text="@string/report_special_notice"
            android:textColor="@color/item_gray_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_report_special" />

        <ImageView
            android:id="@+id/iv_special_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:src="@drawable/icon_blue_tick"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        style="@style/LineViewStyleNew"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20" />

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_25"
        android:lineSpacingExtra="5dp"
        android:text="@string/report_notice"
        android:textColor="@color/complain_gray"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>