<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="79dp"
    android:background="@color/hx_statusBar_background">

    <TextView
        android:id="@+id/tv_setting"
        style="@style/StyleDutySide"
        android:layout_marginStart="@dimen/duty_margin"
        android:text="@string/duty_setting"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_on_duty"
        style="@style/StyleDutyCenterNew"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_12"
        android:text="@string/duty_on"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_setting"
        app:layout_constraintTop_toTopOf="parent" />

    <anda.travel.driver.widget.RippleView
        android:id="@+id/ripple_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xlarge"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_off_duty"
        style="@style/StyleDutySide"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/duty_margin"
        android:text="@string/duty_off"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
